Fix overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 #root{
-  overflow: hidden;
+  overflow-x: hidden;
   min-width: 340px;
 }
 body {
